--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+// For Firebase
+//apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 25
