Added Firebase and logic to handle patient notifications. Created demo video with this version.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-// For Firebase
-//apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 25
@@ -28,15 +26,20 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Wear
-    compile ('com.google.android.support:wearable:2.0.0') {
+    compile('com.google.android.support:wearable:2.0.0') {
         exclude group: 'com.android.support:percent:23.0.1'
+    }
+
+    compile('com.android.support:recyclerview-v7:24.2.0') {
+        exclude group: 'com.android.support:percent:24.2.0'
     }
 
     compile 'com.google.android.gms:play-services-wearable:10.2.0'
     provided 'com.google.android.wearable:wearable:2.0.0'
 
-    compile ('com.android.support:recyclerview-v7:24.2.0') {
-        exclude group: 'com.android.support:percent:24.2.0'
-    }
+    // Firebase notifications
+    compile 'com.google.firebase:firebase-messaging:10.2.0'
 
 }
+// For Firebase
+apply plugin: 'com.google.gms.google-services'
