--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
         // Firebase
         //classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
