--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -26,19 +27,48 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Wear
-    compile('com.google.android.support:wearable:2.0.0') {
-        exclude group: 'com.android.support:percent:23.0.1'
-    }
+    compile 'com.google.android.support:wearable:2.0.1'
+    compile 'com.google.android.gms:play-services-wearable:10.2.1'
+    provided 'com.google.android.wearable:wearable:2.0.1'
 
-    compile('com.android.support:recyclerview-v7:24.2.0') {
-        exclude group: 'com.android.support:percent:24.2.0'
-    }
+    compile 'com.android.support:support-annotations:25.2.0'
 
-    compile 'com.google.android.gms:play-services-wearable:10.2.0'
-    provided 'com.google.android.wearable:wearable:2.0.0'
+    // For Dagger2
+    compile 'com.google.dagger:dagger:2.8'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 
     // Firebase notifications
     compile 'com.google.firebase:firebase-messaging:10.2.0'
+
+    // JVM Unit Testing
+    testCompile('junit:junit:4.12') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
+
+
+    //TODO cleanup Android text exclude statements - not all/any made be needed
+    //Android testing
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2')
+
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2')
+    androidTestCompile('com.android.support.test:runner:0.5') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
+
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    // Matchers
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+
+    //UI testing with UI Automator
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+
+    // Due to conflict in app compile
+    androidTestCompile 'com.android.support:support-annotations:25.2.0'
+    androidTestCompile 'com.android.support:support-v4:25.2.0'
+    androidTestCompile 'com.android.support:design:25.2.0'
+
 
 }
 // For Firebase
