--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     androidTestCompile('com.android.support.test:runner:0.5') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
 
     androidTestCompile 'com.android.support.test:rules:0.5'
     // Matchers
