--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "com.fisincorporated.wearable"
-        minSdkVersion 25
-        targetSdkVersion 25
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,46 +27,55 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // Wear
-    compile 'com.google.android.support:wearable:2.0.1'
-    compile 'com.google.android.gms:play-services-wearable:10.2.1'
-    provided 'com.google.android.wearable:wearable:2.0.1'
+    compile "com.google.android.support:wearable:${rootProject.ext.wearableVersion}"
+    provided "com.google.android.wearable:wearable:${rootProject.ext.wearableVersion}"
+    compile "com.google.android.gms:play-services-wearable:${rootProject.ext.playServicesWearableVersion}"
 
-    compile 'com.android.support:support-annotations:25.2.0'
+
+    compile "com.android.support:support-annotations:${rootProject.ext.androidSupportVersion}"
 
     // For Dagger2
-    compile 'com.google.dagger:dagger:2.8'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+    compile "com.google.dagger:dagger:${rootProject.ext.daggerVersion}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
 
     // Firebase notifications
-    compile 'com.google.firebase:firebase-messaging:10.2.1'
+    compile "com.google.firebase:firebase-messaging:${rootProject.ext.firebaseMessagingVersion}"
+
+    //Retrofit
+    compile "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
+    compile "com.squareup.retrofit2:adapter-rxjava2:${rootProject.ext.retrofitVersion}"
+    compile "com.google.code.gson:gson:${rootProject.ext.gsonVersion}"
+    compile "com.squareup.retrofit2:converter-gson:${rootProject.ext.converterGsonVersion}"
+
+    //okhttp
+    compile "com.squareup.okhttp3:okhttp:${rootProject.ext.okHttpVersion}"
+
 
     // JVM Unit Testing
-    testCompile('junit:junit:4.12') {
+    testCompile("junit:junit:${rootProject.ext.junitVersion}") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile "org.mockito:mockito-core:${rootProject.ext.mockitoCoreVersion}"
 
 
     //Android testing
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2')
+    androidTestCompile "com.android.support.test.espresso:espresso-core:${rootProject.ext.espressoVersion}"
+    androidTestCompile "com.android.support.test.espresso:espresso-contrib:${rootProject.ext.espressoVersion}"
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:${rootProject.ext.espressoVersion}"
 
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2')
-    androidTestCompile('com.android.support.test:runner:0.5') {
+    androidTestCompile("com.android.support.test:runner:${rootProject.ext.testRunnerVersion}") {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
-
-    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile "com.android.support.test:rules:${rootProject.ext.testRunnerVersion}"
     // Matchers
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile "org.hamcrest:hamcrest-library:${rootProject.ext.hamcrestLibraryVersion}"
 
     //UI testing with UI Automator
-    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-
+    androidTestCompile "com.android.support.test.uiautomator:uiautomator-v18:${rootProject.ext.uiAutomatorVersion}"
     // Due to conflict in app compile
-    androidTestCompile 'com.android.support:support-annotations:25.2.0'
-    androidTestCompile 'com.android.support:support-v4:25.2.0'
-    androidTestCompile 'com.android.support:design:25.2.0'
+    androidTestCompile "com.android.support:support-annotations:${rootProject.ext.androidSupportVersion}"
+    androidTestCompile "com.android.support:support-v4:${rootProject.ext.androidSupportVersion}"
+    androidTestCompile "com.android.support:design:${rootProject.ext.androidSupportVersion}"
 
 
 }
