--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,42 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    minSdkVersion = 25
+    targetSdkVersion = 25
+    compileSdkVersion = 25
+    buildToolsVersion = "25.0.2"
+    supportLibVersion = "25.0.1"
+
+    wearableVersion="2.0.1"
+    playServicesWearableVersion="10.2.1"
+    androidSupportVersion="25.2.0"
+
+    daggerVersion = "2.9"
+
+    firebaseMessagingVersion="10.2.1"
+
+    retrofitVersion="2.2.0"
+    gsonVersion="2.7"
+    converterGsonVersion="2.2.0"
+
+
+    okHttpVersion="3.6.0"
+
+    junitVersion="4.12"
+
+    mockitoCoreVersion="1.10.19"
+
+    espressoVersion="2.2.2"
+
+    testRunnerVersion="0.5"
+
+    hamcrestLibraryVersion="1.3"
+
+    uiAutomatorVersion="2.1.2"
+
+}
+
+
+
