--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-   <!-- <uses-permission android:name="android.Manifest.permission.RECEIVE_BOOT_COMPLETED" /> -->
+    <!-- <uses-permission android:name="android.Manifest.permission.RECEIVE_BOOT_COMPLETED" /> -->
 
     <application
         android:allowBackup="true"
@@ -54,11 +54,10 @@
             </intent-filter>
         </service>
 
-        <!-- <service
+          <service
             android:name=".patient.PatientManagerService"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:exported="false"/>
-            -->
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+
 
 
         <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
